[package]
name = "rusty_clz-api"
version = "0.1.0"
authors = ["ebonynon <sithumsandeepap@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
dotenv = "0.9.0"
bson = "1.0.0"
futures = "0.3.5"

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["async-std-runtime"]