[package]
name = "rusty_mern01"
version = "0.1.0"
authors = ["ebonynon <sithumsandeepap@gmail.com>"]
license = "MIT"
repository = "https://github.com/ebonynon/rusty_MERN01.git"
documentation = "https://github.com/ebonynon/rusty_MERN01/blob/master/README.md"
description = "MERN01 backend server rewite with Rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
dotenv = "0.9.0"
bson = "1.0.0"
futures = "0.3.5"
rustc-serialize = "0.3.24"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.11"
actix-cors = "0.2.0"

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["async-std-runtime"]
